syntax = "proto3";
package blog.step3.v1beta1;

option go_package = "github.com/amaurymartiny/step3/x/step3/types";

import "gogoproto/gogo.proto";

message MsgComment {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string postID = 3; 
  string body = 4; 
}

message MsgPost {
    string id = 1;
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string title = 3; 
    string body = 4; 
  }
  
  